@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-18T01:11:49Z",
+  "timestamp" : "2024-02-18T08:18:42Z",
   "count_outdated" : 6676,
   "uniques_outdated" : 2625,
-  "count" : 7023,
-  "uniques" : 2867,
+  "count" : 7033,
+  "uniques" : 2875,
   "clones" : [
     {
       "timestamp": "2024-02-04T00:00:00Z",
-      "count": 36,
-      "count_minmax": [ 36, 48 ],
-      "count_decinc": [ 12, 48 ],
-      "uniques": 21,
-      "uniques_minmax": [ 21, 29 ],
-      "uniques_decinc": [ 8, 29 ]
+      "count": 1,
+      "count_minmax": [ 1, 48 ],
+      "count_decinc": [ 47, 48 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 29 ],
+      "uniques_decinc": [ 28, 29 ]
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 36,
       "uniques_minmax": [ 27, 36 ],
       "uniques_decinc": [ 0, 36 ]
+    },
+    {
+      "timestamp": "2024-02-18T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
+      "count_decinc": [ 0, 10 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
